--- a/cdk/package.json
+++ b/cdk/package.json
@@ -22,13 +22,16 @@
     "typescript": "^3.9.9"
   },
   "dependencies": {
-    "@aws-cdk/aws-apigateway": "^1.96.0",
-    "@aws-cdk/aws-cloudfront": "^1.96.0",
-    "@aws-cdk/aws-cloudfront-origins": "^1.96.0",
-    "@aws-cdk/aws-lambda": "^1.96.0",
-    "@aws-cdk/aws-s3": "^1.96.0",
-    "@aws-cdk/aws-s3-deployment": "^1.96.0",
-    "@aws-cdk/core": "^1.96.0",
-    "source-map-support": "^0.5.16"
+    "@aws-cdk/aws-apigateway": "^1.165.0",
+    "@aws-cdk/aws-certificatemanager": "^1.165.0",
+    "@aws-cdk/aws-cloudfront": "^1.165.0",
+    "@aws-cdk/aws-cloudfront-origins": "^1.165.0",
+    "@aws-cdk/aws-lambda": "^1.165.0",
+    "@aws-cdk/aws-route53": "^1.165.0",
+    "@aws-cdk/aws-route53-targets": "^1.165.0",
+    "@aws-cdk/aws-s3": "^1.165.0",
+    "@aws-cdk/aws-s3-deployment": "^1.165.0",
+    "@aws-cdk/core": "^1.165.0",
+    "source-map-support": "^0.5.21"
   }
 }
