--- a/simple-ssr/package.json
+++ b/simple-ssr/package.json
@@ -8,17 +8,20 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.21.2",
     "express": "4.17.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "next": "^12.2.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-scripts": "5.0.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "build-server": "webpack --config webpack.server.js --mode=development",
-    "build-all": "npm-run-all --parallel build build-server"
+    "build-all": "npm-run-all --parallel build build-server",
+    "dev": "next dev",
+    "build": "next build && next export",
+    "start": "next start",
+    "lint": "next lint"
   },
   "eslintConfig": {
     "extends": "react-app"
