--- a/simple-ssr/package.json
+++ b/simple-ssr/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.21.2",
     "express": "4.17.1",
     "next": "^12.2.2",
+    "nosleep.js": "^0.12.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-scripts": "5.0.0"
