--- a/simple-ssr/package.json
+++ b/simple-ssr/package.json
@@ -10,12 +10,13 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@turf/turf": "^6.5.0",
     "axios": "^0.21.2",
     "express": "4.17.1",
     "next": "^12.2.2",
     "nosleep.js": "^0.12.0",
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-scripts": "5.0.0"
   },
   "scripts": {
