--- a/simple-ssr/package.json
+++ b/simple-ssr/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "@turf/turf": "^6.5.0",
+    "dayjs": "^1.11.13",
     "express": "4.17.1",
     "next": "^12.2.2",
     "nosleep.js": "^0.12.0",
